[metadata]
name = aws-glue-libs
version = 1.0.0
author = AWS Glue
author_email = author@example.com
description = AWS Glue Libraries for Python
long_description = file: README.md
long_description_content_type = text/markdown
license = 'Amazon Software License 1.0'
url = https://github.com/awslabs/aws-glue-libs/tree/glue-1.0
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = 
    awsglue
    awsglue.dataframe_transforms
    awsglue.transforms
python_requires = >= 3.7
